--- a/index.html
+++ b/index.html
@@ -1,1 +1,189 @@
-hejjj
+<!DOCTYPE html>
+<html>
+	<head lang="sv">
+		<meta charset="UTF-8">
+		<title>Projekt - Kaffe företag</title>
+		<link href="css/style.css" type="text/css" rel="stylesheet">
+		<link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
+ 		<link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
+
+ <!-- corben, nobile-->
+	</head>
+	
+	<body>
+		
+		
+		
+		<nav>
+			<div class="left">
+			<a id="home" href="#homeSection">HEM</a>
+			<a id="about" href="#aboutSection">OM</a>
+			<a id="service" href="#serviceSection">TJÄNSTER</a>
+			<a id="contact" href="#contactSection">KONTAKT</a>
+			<a id="projects" href="#projectSection">PROJEKT</a>
+			</div>
+			<div class="right">
+				<div class="dropdown">
+  <button class="dropbtn">Language&#9660;</button>
+  <div class="dropdown-content">
+    <a href="#">Svenska</a>
+    <a href="#">English</a>
+    <a href="#">Pirat</a>
+  </div>
+</div>
+			</div>
+		</nav>
+			<!-- på right ska det finnas en dropdown, med t.ex. språkval -->
+			<!--HEM SEKTION-->
+		<div id="homeSection" class="sect sectOne">
+			<section class="cirkelwrap">
+			<h1>KAFFEBÖNAN</h1>
+			<div class="entredje">
+			<div class="circular1">
+				<a href="https://www.pexels.com/search/coffee/" alt="Link to more information about coffee">
+				<ul class="demo-3">
+					<li>
+						<figure>
+				<img src="img/kaffe1.jpg" alt="bild på kaffe" id=".cirkel1">
+						<figcaption>
+							<h2>Svart Kaffe</h2>
+							<p>Klicka för ännu mer information!
+								<br><br>
+							 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+							Aenean commodo ligula eget dolor. Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes
+							 </p>
+							</figcaption>
+						</figure>
+						</li>
+						</ul>
+						</a>
+			</div>
+			</div>
+			<div class="entredje">
+			<div class="circular2">
+			<a href="https://www.pexels.com/search/coffee/" alt="Link to more information about coffee">
+				<ul class="bild2">
+					<li>
+						<figure>
+				<img src="img/kaffe2.jpg" alt="bild på kaffe" id=".cirkel2">
+				<figcaption>
+					<h2>Cappuccino</h2>
+					<p>Klicka för ännu mer information!
+						<br><br>
+						 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+							Aenean commodo ligula eget dolor. Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes
+					  </p>
+				  </figcaption>
+			  </figure>
+		  </li>
+	  </ul>
+	 </a>
+			</div>
+			</div>
+			<div class="entredje">
+			<div class="circular3">
+			<a href="https://www.pexels.com/search/coffee/" alt="Link to more information about coffee">
+				<ul class="bild3">
+					<li>
+						<figure>
+				 <img src="img/kaffe3.jpg" alt="bild på kaffe" id=".cirkel3">
+				 		<figcaption>
+							 <h2>Americano</h2>
+							 <p>Klicka för ännu mer information!
+								 <br><br>
+								 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+							Aenean commodo ligula eget dolor. Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes
+							 </p>
+						</figcaption>
+					</figure>
+				</li>
+			</ul>
+		</a>
+			</div>
+			<!--möjligvis lägga till paragrafer under med lite fakta -->
+			</div>
+			</section>
+			<!--left 40%, mitten företagsnamn med h1, h2 på resten av alla sidor som underrubriker, right 40% eller justerat med dropdown-->
+		</div>
+		<!-- OM SECTION-->
+		<div id="aboutSection" class="subSection">
+			<div class="infobox">
+			<h2 class="infoOM">Om oss</h2>
+			<p class="infoOM">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+							Aenean commodo ligula eget dolor. Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+							Aenean commodo ligula eget dolor. Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes</p>
+			<h3 class="infoOM">Vad kan vi garantera?</h3>
+			<p class="infoOM">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+							Aenean commodo ligula eget dolor. Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes Aenean massa. Cum s
+							 natoque penatibus et magnis dis parturient montes</p>
+		</div>
+		</div>
+		<!--TJÄNSTER SECTION -->
+		<div id="serviceSection" class="sect sectTwo">
+			<div class="halv1">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="img/kaffe9.jpg" alt="">
+        <div class="overlay">
+           <h2>Tillverkning</h2>
+           <a class="info" href="#homeSection">Hur går det till?</a>
+        </div>
+    </div>
+</div>
+		</div>
+		
+		<div class="halv2">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    <div class="hovereffect">
+        <img class="img-responsive" src="img/kaffe10.jpg" alt="">
+        <div class="overlay">
+           <h2>Leverans</h2>
+           <a class="info" href="#homeSection">Hur går det till?</a>
+        </div>
+    </div>
+	
+		</div>
+		<p class="info">Hur kommer det sig att vår <br>
+			service och leveranstid<br>
+			är så bra?</p>
+		<p class="infoo">Hur kommer det sig att vår<br>
+			 kvalitet är så bra?</p>
+		</div>
+		</div>
+		<!-- KONTAKT SEKTION -->
+		<div id="contactSection" class="subSection2">
+			<div class="cont">
+				<h3 class="htre">Följ oss</h3>
+				<a href=""> <img alt="Bild på facebook" src="img/ikon/facebook.png"></a>
+				<a href=""> <img alt="Bild på instagram" src="img/ikon/instagram.png"></a>
+				<a href=""> <img alt="Bild på pintrest" src="img/ikon/pintrest.png"></a>
+				<a href=""> <img alt="Bild på twitter" src="img/ikon/twitter.png"></a>
+				<a href=""> <img alt="Bild på youtube" src="img/ikon/youtube.png"></a>
+				<br>
+				<p class="info2">Följ oss för mer information! <br><br>
+					Vi finns utanför Söderköping i en källare!
+				<p>
+			</div>
+			<div class="cont">
+				<h3 class="htre">Kontakta oss</h3>
+				<img src="img/ikon/phone.png" alt="Bild på telefon"> <p class="info3">0XX-XXXXXXXX</p> <br><br>
+				<img src="img/ikon/mail.png" alt="Bild på mail"> <p class="info3">kontakt@hotmail.se</p> <br><br>
+				<img src="img/ikon/skype.png" alt="Bild på skype">  <p class="info3">skype@användarnamn</p>
+			</div>
+		</div>
+		<!--PROJEKT SEKTION -->
+		<div id="projectsSection" class="sect sectThree">
+			<p class="pSektion">blabla</p>
+		</div>
+		<script src="js/jquery-1.12.4.min.js"></script>
+		<script src="js/app.js"></script>
+		<script src="js/dropdown.js"></script>
+		<script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+	</body>
+</html>
